[tool.poetry]
name = "js-source-maps-decoder"
version = "1.0.0"
description = "JavaScript Source Maps Decoder"
authors = ["Danil Ovchinnikov <Danil42Worker@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DanilBox/JavaScript-Source-Maps-Decoder"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
types-requests = "^2.28.11.17"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = 3.11
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
